--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
                 <version>1.2.3</version>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jdk8</artifactId>
+                <version>2.9.9</version>
+            </dependency>
+
         </dependencies>
 
         <build>
